feat: delete account property added, sen mail delete accout user.

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -293,6 +293,10 @@
   "@cancel": {
     "description": "إلغاء"
   },
+  "vazgec": "إلغاء",
+  "@vazgec": {
+    "description": "إلغاء"
+  },
   "products": "المنتجات",
   "@products": {
     "description": "المنتجات"
